@@ -35,33 +35,54 @@
  */
 
 /*
- * @test
- * @summary JSR-166 tck tests, in a number of variations.
- *          The first is the conformance testing variant,
- *          while others also test implementation details.
+ * @test id=default
+ * @summary Conformance testing variant of JSR-166 tck tests.
+ * @build *
+ * @modules java.management
+ * @run junit/othervm/timeout=1000 JSR166TestCase
+ */
+
+/*
+ * @test id=security-manager
+ * @summary Conformance testing variant of JSR-166 tck tests
+ *          with java security manager set to allow.
  * @build *
  * @modules java.management
  * @run junit/othervm/timeout=1000 -Djava.security.manager=allow JSR166TestCase
+ */
+
+/*
+ * @test id=forkjoinpool-common-parallelism
+ * @summary Test implementation details variant of JSR-166
+ *          tck tests with ForkJoinPool common parallelism.
+ * @build *
+ * @modules java.management
  * @run junit/othervm/timeout=1000
  *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
  *      --add-opens java.base/java.lang=ALL-UNNAMED
- *      -Djava.security.manager=allow
- *      -Djsr166.testImplementationDetails=true
- *      JSR166TestCase
- * @run junit/othervm/timeout=1000
- *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
- *      --add-opens java.base/java.lang=ALL-UNNAMED
- *      -Djava.security.manager=allow
  *      -Djsr166.testImplementationDetails=true
  *      -Djava.util.concurrent.ForkJoinPool.common.parallelism=0
  *      JSR166TestCase
  * @run junit/othervm/timeout=1000
  *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
  *      --add-opens java.base/java.lang=ALL-UNNAMED
- *      -Djava.security.manager=allow
  *      -Djsr166.testImplementationDetails=true
  *      -Djava.util.concurrent.ForkJoinPool.common.parallelism=1
  *      -Djava.util.secureRandomSeed=true
+ *      JSR166TestCase
+ */
+
+/*
+ * @test id=others
+ * @summary Remaining test implementation details variant of
+ *          JSR-166 tck tests apart from ForkJoinPool common
+ *          parallelism.
+ * @build *
+ * @modules java.management
+ * @run junit/othervm/timeout=1000
+ *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+ *      --add-opens java.base/java.lang=ALL-UNNAMED
+ *      -Djsr166.testImplementationDetails=true
  *      JSR166TestCase
  * @run junit/othervm/timeout=1000/policy=tck.policy
  *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
@@ -288,7 +309,7 @@ public class JSR166TestCase extends TestCase {
      * May be initialized from any of:
      * - the "jsr166.delay.factor" system property
      * - the "test.timeout.factor" system property (as used by jtreg)
-     *   See: http://openjdk.java.net/jtreg/tag-spec.html
+     *   See: https://openjdk.org/jtreg/tag-spec.html
      * - hard-coded fuzz factor when using a known slowpoke VM
      */
     private static final float delayFactor = delayFactor();
@@ -571,7 +592,6 @@ public class JSR166TestCase extends TestCase {
             ScheduledExecutorSubclassTest.suite(),
             SemaphoreTest.suite(),
             SynchronousQueueTest.suite(),
-            SystemTest.suite(),
             ThreadLocalTest.suite(),
             ThreadPoolExecutorTest.suite(),
             ThreadPoolExecutorSubclassTest.suite(),
@@ -756,7 +776,7 @@ public class JSR166TestCase extends TestCase {
      * Returns the shortest timed delay. This can be scaled up for
      * slow machines using the jsr166.delay.factor system property,
      * or via jtreg's -timeoutFactor: flag.
-     * http://openjdk.java.net/jtreg/command-help.html
+     * https://openjdk.org/jtreg/command-help.html
      */
     protected long getShortDelay() {
         return (long) (50 * delayFactor);
